Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <h3>
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
-<p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.  Wood blocks containing NFC tags and magnets mount to a drawer face on a sideboard behind which are matching magnets, an NFC controller and a Raspberry Pi embedded computer.  Each block's NFC tag is mapped to a song which plays when the block attaches, and the song title is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  A primary design goal was to make the technology disappear completely: the experience is purely organic and aural - and quite magical.</p>
+<p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.  Wood blocks containing NFC tags and magnets mount to a drawer face on a sideboard behind which are matching magnets, an NFC controller and a Raspberry Pi embedded computer.  Each block's NFC tag is mapped to a song which plays when the block attaches, and the song title is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  A primary design goal was to make the technology disappear completely: the experience is tactile, organic and aural - and quite magical.</p>
+
+<p><img src="https://www.icloud.com/photostream/#ABGWZuqDGy14ko;8E6028AF-A328-4508-8AF9-0A8E94428419" alt="Blocks"></p>
 
 <h3>
 <a name="technologies-used" class="anchor" href="#technologies-used"><span class="octicon octicon-link"></span></a>Technologies Used</h3>
