--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.  Wood blocks containing NFC tags and magnets mount to a drawer face on a sideboard behind which are matching magnets, an NFC controller and a Raspberry Pi embedded computer.  Each block's NFC tag is mapped to a song which plays when the block attaches, and the song title is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  A primary design goal was to make the technology disappear completely: the experience is tactile, organic and aural - and quite magical.</p>
 
-<p><img src="https://www.icloud.com/photostream/#ABGWZuqDGy14ko;8E6028AF-A328-4508-8AF9-0A8E94428419" alt="Blocks"></p>
+<p><a href="Blocks">https://docs.google.com/uc?export=download&amp;id=0B-c-spyU_5E4OWpnVzZVSW45YWM</a></p>
 
 <h3>
 <a name="technologies-used" class="anchor" href="#technologies-used"><span class="octicon octicon-link"></span></a>Technologies Used</h3>
