--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Song Blocks : A no-tech, toddler-friendly controller for Sonos using NFC tags">
+    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
 
-    <title>Song Blocks</title>
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Song Blocks by shawnrk</title>
   </head>
 
   <body>
+    <a id="forkme_banner" href="https://github.com/shawnrk/songblocks">View on GitHub</a>
+    <div class="shell">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/shawnrk/songblocks">View on GitHub</a>
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Song Blocks</h1>
+            <h2>A no-tech, toddler-friendly controller for Sonos using NFC tags</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-          <h1 id="project_title">Song Blocks</h1>
-          <h2 id="project_tagline">A no-tech, toddler-friendly controller for Sonos using NFC tags</h2>
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/shawnrk/songblocks/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/shawnrk/songblocks/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/shawnrk/songblocks/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/shawnrk/songblocks/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <h3>
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.  Wood blocks containing NFC tags and magnets mount to a drawer face on a sideboard behind which are matching magnets, an NFC controller and a Raspberry Pi embedded computer.  Each block's NFC tag is mapped to a song which plays when the block attaches, and the song title is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  A primary design goal was to make the technology disappear completely: the experience is tactile, organic and aural - and quite magical.</p>
 
-<p><a href="Blocks">https://docs.google.com/uc?export=download&amp;id=0B-c-spyU_5E4OWpnVzZVSW45YWM</a></p>
+<p><img src="https://www.dropbox.com/s/7ny63nauakkqr4p/blocks.JPG?dl=1" alt="Blocks"></p>
 
 <h3>
 <a name="technologies-used" class="anchor" href="#technologies-used"><span class="octicon octicon-link"></span></a>Technologies Used</h3>
@@ -52,14 +67,19 @@
 <li>Open-source Python libs: <a href="https://launchpad.net/nfcpy">nfcpy</a> for the NFC interface, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> for the Twitter interface</li>
 </ul>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Song Blocks maintained by <a href="https://github.com/shawnrk">shawnrk</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/shawnrk">shawnrk</a> can be found on <a href="https://github.com/shawnrk/songblocks">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
 
               <script type="text/javascript">
@@ -72,7 +92,6 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
