--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <h3>
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
-<p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.  </p>
+<p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.</p>
 
-<p>Wood blocks containing NFC tags magnetically attach to a drawer face behind which is a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song which plays when the block attaches, and the song title is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  </p>
+<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song.  The title of each played song is tweeted at [<a href="https://github.com/songblocks" class="user-mention">@songblocks</a> (<a href="https://twitter.com/songblocks">https://twitter.com/songblocks</a>).  </p>
 
-<p>A primary design goal was to make the technology disappear completely: the experience is organic, tactile and aural - and quite magical.</p>
+<p>The primary design goal was to make the technology disappear completely: the final experience is organic, tactile and aural - and quite magical.  The blocks align and pull themselves to the drawer face, snapping on with a satisfying <em>clack!</em>.  Music fills the room until the block is prised away. The <a href="https://twitter.com/songblocks">@songblocks</a> Twitter feed silently records a history my son's listening habits.  It will be fun to graph it in a few months to see how his preferences have changed over time. </p>
 
 <p><img src="https://www.dropbox.com/s/7ny63nauakkqr4p/blocks.JPG?dl=1" alt="Blocks"></p>
 
