--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.</p>
 
-<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song.  The title of each played song is tweeted at [<a href="https://github.com/songblocks" class="user-mention">@songblocks</a> (<a href="https://twitter.com/songblocks">https://twitter.com/songblocks</a>).  </p>
+<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song, which plays when the block attaches and stops when it is detached.  The title of each played song is tweeted at [<a href="https://github.com/songblocks" class="user-mention">@songblocks</a> (<a href="https://twitter.com/songblocks">https://twitter.com/songblocks</a>).  </p>
 
 <p>The primary design goal was to make the technology disappear completely: the final experience is organic, tactile and aural - and quite magical.  The blocks align and pull themselves to the drawer face, snapping on with a satisfying <em>clack!</em>.  Music fills the room until the block is prised away. The <a href="https://twitter.com/songblocks">@songblocks</a> Twitter feed silently records a history my son's listening habits.  It will be fun to graph it in a few months to see how his preferences have changed over time. </p>
 
@@ -76,21 +76,21 @@ Cavities were routed out for the NFC tag and magnets
 The halves were then glued and clamped
 Each side was cleaned up with a band saw, taking just a thin slice off each side to even things up
 The edges were rounded off with a router
-The sides and edges were sanded with 120 grit sandpaper (the seam between the halves is barely visible)
-The numbers were imprinted with rubber stamps, and then burned in with a soldering iron
+The sides and edges were sanded (the seam between the halves is barely visible)
+The numbers were burned in
 I've opted to leave the wood natural - no oil, sealant, etc.</p>
 
 <h3>
 <a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
 
 <p>Cavities were routed out from the inside of the drawer face to place the magnets
-The NFC controller board is just stuck on to the inside of the drawer face with electrical tape
+The NFC controller board is stuck on to the inside of the drawer face with electrical tape
 The Raspberry Pi just sits in the drawer, with its power cord running out the back</p>
 
 <h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
 
-<p>I haven't coded in more than a decade and this is my first Python project, so its ugly.  But functional, and pretty self-explanatory. The repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
+<p>I haven't coded in over a decade and this is my first Python project.  So its ugly, but functional, and pretty self-explanatory. The repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
       </section>
 
       <footer>
