--- a/index.html
+++ b/index.html
@@ -1,57 +1,42 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+    <meta name="description" content="Song Blocks : A no-tech, toddler-friendly controller for Sonos using NFC tags">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Song Blocks by shawnrk</title>
+    <title>Song Blocks</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/shawnrk/songblocks">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Song Blocks</h1>
-            <h2>A no-tech, toddler-friendly controller for Sonos using NFC tags</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/shawnrk/songblocks">View on GitHub</a>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/shawnrk/songblocks/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/shawnrk/songblocks/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+          <h1 id="project_title">Song Blocks</h1>
+          <h2 id="project_tagline">A no-tech, toddler-friendly controller for Sonos using NFC tags</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/shawnrk/songblocks/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/shawnrk/songblocks/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.</p>
 
-<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song, which plays when the block attaches and stops when it is detached.  The title of each played song is tweeted at [<a href="https://github.com/songblocks" class="user-mention">@songblocks</a> (<a href="https://twitter.com/songblocks">https://twitter.com/songblocks</a>).  </p>
+<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song, which plays when the block attaches and stops when it is detached.  The title of each played song is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  </p>
 
 <p>The primary design goal was to make the technology disappear completely: the final experience is organic, tactile and aural - and quite magical.  The blocks align and pull themselves to the drawer face, snapping on with a satisfying <em>clack!</em>.  Music fills the room until the block is prised away. The <a href="https://twitter.com/songblocks">@songblocks</a> Twitter feed silently records a history my son's listening habits.  It will be fun to graph it in a few months to see how his preferences have changed over time. </p>
 
@@ -92,19 +77,14 @@ The Raspberry Pi just sits in the drawer, with its power cord running out the ba
 
 <p>I haven't coded in over a decade and this is my first Python project.  So its ugly, but functional, and pretty self-explanatory. The repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
       </section>
+    </div>
 
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/shawnrk">shawnrk</a> can be found on <a href="https://github.com/shawnrk/songblocks">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Song Blocks maintained by <a href="https://github.com/shawnrk">shawnrk</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-
     </div>
 
               <script type="text/javascript">
@@ -117,6 +97,7 @@ The Raspberry Pi just sits in the drawer, with its power cord running out the ba
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
