--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.</p>
 
-<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song, which plays when the block attaches and stops when it is detached.  The title of each played song is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  </p>
+<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song, which plays when the block attaches and stops when it is detached.  Each played song is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  </p>
 
-<p>The primary design goal was to make the technology disappear completely: the final experience is organic, tactile and aural - and quite magical.  The blocks align and pull themselves to the drawer face, snapping on with a satisfying <em>clack!</em>.  Music fills the room until the block is prised away. The <a href="https://twitter.com/songblocks">@songblocks</a> Twitter feed silently records a history my son's listening habits.  It will be fun to graph it in a few months to see how his preferences have changed over time. </p>
+<p>The primary design goal was to make the technology disappear completely: the final experience is organic, tactile and aural - and quite magical.  The blocks align and pull themselves to the drawer face, snapping on with a satisfying <em>clack!</em>.  Music fills the room until the block is prised away. <a href="https://twitter.com/songblocks">@songblocks</a> silently records a history my son's listening habits.  It will be fun to graph it in a few months to see how his preferences have changed over time. </p>
 
 <p><img src="https://www.dropbox.com/s/7ny63nauakkqr4p/blocks.JPG?dl=1" alt="Blocks"></p>
 
@@ -67,17 +67,17 @@
 <li>Rare-earth magnets</li>
 <li>A simple Python script (~100 lines) I wrote, hosted <a href="https://github.com/shawnrk/songblocks">here</a>
 </li>
-<li>Open-source Python libs: <a href="https://launchpad.net/nfcpy">nfcpy</a> for the NFC interface, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> for the Twitter interface</li>
+<li>Open-source Python libs: <a href="https://github.com/SoCo/SoCo">SoCo</a> to talk to the Sonos, <a href="https://launchpad.net/nfcpy">nfcpy</a> to talk to the NFC controller, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> to talk to Twitter</li>
 </ul><h3>
 <a name="making-the-blocks" class="anchor" href="#making-the-blocks"><span class="octicon octicon-link"></span></a>Making the blocks</h3>
 
-<p>I used 3/8" thick walnut boards and cut them down to pieces that were about 1-1/2"x3-1/4".<br>
+<p>I used 3/8" thick walnut boards and cut them down to pieces that were about 1-1/2"x3-1/4".  Two of these form each block.<br>
 Cavities were routed out for the NFC tag and magnets
 The halves were then glued and clamped
-Each side was cleaned up with a band saw, taking just a thin slice off each side to even things up
-The edges were rounded off with a router
-The sides and edges were sanded (the seam between the halves is barely visible)
-The numbers were burned in
+Each side was cleaned up by sawing off a very thin slice on the band saw
+The edges were given a 1/8" radius round-over with a router
+The sides and edges were sanded with 120 grit (the seam between the halves were rendered barely visible)
+The numbers were imprinted with a ink stamp set, then burned in with a soldering iron
 I've opted to leave the wood natural - no oil, sealant, etc.</p>
 
 <h3>
