Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,23 +71,24 @@
 </ul><h3>
 <a name="making-the-blocks" class="anchor" href="#making-the-blocks"><span class="octicon octicon-link"></span></a>Making the blocks</h3>
 
-<p>I used 3/8" thick walnut boards and cut them down to pieces that were about 1-1/2"x3-1/4".  Two of these form each block.<br>
-Cavities were routed out for the NFC tag and magnets
-The halves were then glued and clamped
-Each side was cleaned up by sawing off a very thin slice on the band saw
-The edges were given a 1/8" radius round-over with a router
-The sides and edges were sanded with 120 grit (the seam between the halves were rendered barely visible)
-The numbers were imprinted with a ink stamp set, then burned in with a soldering iron
-I've opted to leave the wood natural - no oil, sealant, etc.</p>
-
-<h3>
+<ul>
+<li>I used 3/8" thick walnut boards and cut them down to pieces that were about 1-1/2"x3-1/4".  Two of these form each block.<br>
+</li>
+<li>Cavities were routed out for the NFC tag and magnets</li>
+<li>The halves were then glued and clamped</li>
+<li>Each side was cleaned up by sawing off a very thin slice on the band saw</li>
+<li>The edges were given a 1/8" radius round-over with a router</li>
+<li>The sides and edges were sanded with 120 grit (the seam between the halves were rendered barely visible)</li>
+<li>The numbers were imprinted with a ink stamp set, then burned in with a soldering iron</li>
+<li>I've opted to leave the wood natural - no oil, sealant, etc.</li>
+</ul><h3>
 <a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
 
-<p>Cavities were routed out from the inside of the drawer face to place the magnets
-The NFC controller board is stuck on to the inside of the drawer face with electrical tape
-The Raspberry Pi just sits in the drawer, with its power cord running out the back</p>
-
-<h3>
+<ul>
+<li>Cavities were routed out from the inside of the drawer face to place the magnets</li>
+<li>The NFC controller board is stuck on to the inside of the drawer face with electrical tape</li>
+<li>The Raspberry Pi just sits in the drawer, with its power cord running out the back</li>
+</ul><h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
 
 <p>I haven't coded in over a decade and this is my first Python project.  So its ugly, but functional, and pretty self-explanatory. The repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
