--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </li>
 <li>Open-source Python libs: <a href="https://github.com/SoCo/SoCo">SoCo</a> to talk to the Sonos, <a href="https://launchpad.net/nfcpy">nfcpy</a> to talk to the NFC controller, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> to talk to Twitter</li>
 </ul><h3>
-<a name="making-the-blocks" class="anchor" href="#making-the-blocks"><span class="octicon octicon-link"></span></a>Making the blocks</h3>
+<a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The blocks</h3>
 
 <ul>
 <li>I used 3/8" thick walnut boards and cut them down to pieces that were about 1-1/2"x3-1/4".  Two of these form each block.<br>
