Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,33 +65,39 @@
 <li>NFC controller board</li>
 <li>NFC tags</li>
 <li>Rare-earth magnets</li>
-<li>A simple Python script (~100 lines) I wrote, hosted <a href="https://github.com/shawnrk/songblocks">here</a>
+<li>A simple Python script (~100 lines) that I wrote, hosted on GitHub <a href="https://github.com/shawnrk/songblocks">here</a>
 </li>
 <li>Open-source Python libs: <a href="https://github.com/SoCo/SoCo">SoCo</a> to talk to the Sonos, <a href="https://launchpad.net/nfcpy">nfcpy</a> to talk to the NFC controller, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> to talk to Twitter</li>
 </ul><h3>
 <a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The blocks</h3>
 
 <ul>
-<li>I used 3/8" thick walnut boards and cut them down to pieces that were about 1-1/2"x3-1/4".  Two of these form each block.<br>
+<li>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block)<br>
 </li>
-<li>Cavities were routed out for the NFC tag and magnets</li>
-<li>The halves were then glued and clamped</li>
-<li>Each side was cleaned up by sawing off a very thin slice on the band saw</li>
+<li><p>Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface)
+<a href="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1">Adding NFC tags and gluing in the magnets</a></p></li>
+<li><p>The halves were then glued and clamped
+<a href="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1">Clamping</a></p></li>
+<li><p>Each side was evened out by cutting off a very thin slice with a band saw</p></li>
 <li>The edges were given a 1/8" radius round-over with a router</li>
-<li>The sides and edges were sanded with 120 grit (the seam between the halves were rendered barely visible)</li>
-<li>The numbers were imprinted with a ink stamp set, then burned in with a soldering iron</li>
-<li>I've opted to leave the wood natural - no oil, sealant, etc.</li>
+<li><p>The sides and edges were sanded with 120 grit (the seam between the halves were rendered barely visible)
+<a href="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1">Before &amp; After</a>
+<a href="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1">Before &amp; After 2</a></p></li>
+<li><p>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron
+<a href="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1">Burn</a></p></li>
+<li><p>The wood has been left natural - no oil, sealant, etc.</p></li>
 </ul><h3>
 <a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
 
 <ul>
-<li>Cavities were routed out from the inside of the drawer face to place the magnets</li>
-<li>The NFC controller board is stuck on to the inside of the drawer face with electrical tape</li>
+<li>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface)</li>
+<li>The NFC controller board is taped to the inside of the drawer face</li>
 <li>The Raspberry Pi just sits in the drawer, with its power cord running out the back</li>
+<li>The wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground </li>
 </ul><h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
 
-<p>I haven't coded in over a decade and this is my first Python project.  So its ugly, but functional, and pretty self-explanatory. The repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
+<p>I haven't coded in over a decade and this is my first Python project.  So its ugly, but functional and pretty self-explanatory. The GitHub repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
       </section>
 
       <footer>
