Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <ul>
 <li>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block)<br>
 </li>
-<li><p>Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface)
+<li><p>Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.
 <img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"></p></li>
 <li><p>The halves were then glued and clamped
 <img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p></li>
