--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos by himself.</p>
 
-<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song, which plays when the block attaches and stops when it is detached.  Each played song is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  </p>
+<p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song, which plays on the Sonos when the block attaches to the drawer and stops when it is detached.  Each played song is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  </p>
 
-<p>The primary design goal was to make the technology disappear completely: the final experience is organic, tactile and aural - and quite magical.  The blocks align and pull themselves to the drawer face, snapping on with a satisfying <em>clack!</em>.  Music fills the room until the block is prised away. <a href="https://twitter.com/songblocks">@songblocks</a> silently records a history my son's listening habits.  It will be fun to graph it in a few months to see how his preferences have changed over time. </p>
+<p>The primary design goal was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  The blocks align and pull themselves to the drawer face, snapping on with a satisfying <em>clack!</em>.  Music fills the room until the block is prised away. <a href="https://twitter.com/songblocks">@songblocks</a> silently records my son's listening history.  It will be interesting to graph this data in a few months to see how his preferences have changed over time. </p>
 
 <p><img src="https://www.dropbox.com/s/7ny63nauakkqr4p/blocks.JPG?dl=1" alt="Blocks"></p>
 
