--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Song Blocks</h1>
-            <h2>A high-tech-no-tech, toddler-friendly controller for Sonos using NFC tags</h2>
+            <h2>A no-tech-high-tech, toddler-friendly controller for Sonos using NFC tags</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
