Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
 <img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"></p></li>
 <li><p>The halves were then glued and clamped
 <img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p></li>
-<li><p>Each side was evened out by cutting off a very thin slice with a band saw</p></li>
+<li><p>Each side was evened out by trimming off a very thin slice with a band saw</p></li>
 <li>The edges were given a 1/8" radius round-over with a router</li>
 <li><p>The sides and edges were sanded with 120 grit (the seam between the halves were rendered barely visible)
+Before and after the trimming, radiusing, and sanding:
 <img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2"></p></li>
 <li><p>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron
 <img src="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1" alt="Burn"></p></li>
