Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,17 +75,20 @@
 <li>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block)<br>
 </li>
 <li>Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.
-<img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"><br>
+<img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets">
 </li>
-<li><p>The halves were then glued and clamped
-<img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p></li>
-<li><p>Each side was evened out by trimming off a very thin slice with a band saw</p></li>
+<li>The halves were then glued and clamped
+<img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping">
+</li>
+<li>Each side was evened out by trimming off a very thin slice with a band saw</li>
 <li>The edges were given a 1/8" radius round-over with a router</li>
-<li><p>The sides and edges were sanded with 120 grit. Before and after the trimming, radiusing, and sanding:
-<img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2"></p></li>
-<li><p>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron
-<img src="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1" alt="Burn"></p></li>
-<li><p>The wood has been left natural - no oil, sealant, etc.</p></li>
+<li>The sides and edges were sanded with 120 grit. Before and after the trimming, radiusing, and sanding:
+<img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2">
+</li>
+<li>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron
+<img src="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1" alt="Burn">
+</li>
+<li>The wood has been left natural - no oil, sealant, etc.</li>
 </ul><h3>
 <a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
 
