--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h3>
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
-<p>I built Song Blocks so my toddler could play music on the living room Sonos by himself without (apparently) interacting with a computing device.</p>
+<p>I built Song Blocks so my toddler could play music on the living room Sonos by himself without <em>apparently</em> interacting with a computing device.</p>
 
 <p>Wood blocks containing NFC tags magnetically attach to a drawer face, behind which sits a Raspberry Pi and an NFC controller.  Each block's NFC tag is mapped to a song, which plays on the Sonos when the block attaches to the drawer and stops when it is detached.  Each played song is tweeted at <a href="https://twitter.com/songblocks">@songblocks</a>.  </p>
 
