Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,15 +71,13 @@ The primary design goal was to make the technology disappear completely; the fin
 </ul><h3>
 <a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The blocks</h3>
 
-<ul>
-<li>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block)<br>
-</li>
-<li>Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.
+<p>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block)<br>
+Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.
 <img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets">
-</li>
-<li>The halves were then glued and clamped
-<img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping">
-</li>
+The halves were then glued and clamped
+<img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p>
+
+<ul>
 <li>Each side was evened out by trimming off a very thin slice with a band saw</li>
 <li>The edges were given a 1/8" radius round-over with a router</li>
 <li>The sides and edges were sanded with 120 grit. Before and after the trimming, radiusing, and sanding:
