Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -73,19 +73,24 @@
 </ul><h3>
 <a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The blocks</h3>
 
-<p>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block).  Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.  The halves were then glued together and clamped.
-<img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"><img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping">
-Each side was evened out by trimming off a very thin slice with a band saw.  The edges were given a 1/8" radius round-over with a router.  The sides and edges were sanded with 120 grit. Before and after the trimming, radiusing, and sanding:
-<img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2"></p>
+<p>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block).  Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.  The halves were then glued together and clamped.  </p>
 
-<hr><p>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron
-<img src="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1" alt="Burn">
-The wood has been left natural - no oil, sealant, etc.</p>
+<p><img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"><img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p>
+
+<p>Each side was evened out by trimming off a very thin slice with a band saw.  The edges were given a 1/8" radius round-over with a router.  The sides and edges were sanded with 120 grit. Before and after the trimming, radiusing, and sanding:  </p>
+
+<p><img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2"></p>
+
+<hr><p>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron.  </p>
+
+<p><img src="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1" alt="Burn"></p>
+
+<p>The wood has been left natural - no oil, sealant, etc.</p>
 
 <h3>
 <a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
 
-<p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground </p>
+<p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground.  </p>
 
 <h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
