Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
 <p><img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"><img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p>
 
-<p>Each side was evened out by trimming off a very thin slice with a band saw.  The edges were given a 1/8" radius round-over with a router.  The sides and edges were sanded with 120 grit. Before and after the trimming, radiusing, and sanding:  </p>
+<p>Each side was evened out by trimming off a very thin slice with a band saw.  The edges were given a 1/8" radius round-over with a router.  The sides and edges were sanded with 150 grit sandpaper. The seam between the halves was rendered nearly indiscernible.
+Before and after the trimming, radiusing, and sanding:  </p>
 
 <p><img src="https://www.dropbox.com/s/ufv3jjwsialenos/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/y5lrcd2twwp79yn/squareround2.JPG?dl=1" alt="Before &amp; After 2"></p>
 
@@ -83,7 +84,7 @@
 
 <p><img src="https://www.dropbox.com/s/z3jzznzlrof9oyq/burn.JPG?dl=1" alt="Burn"></p>
 
-<p>The wood has been left natural - no oil, sealant, etc.</p>
+<p>The wood has been left natural - no oil or stain.  Naked walnut is beautiful, wears well, and smells nice.</p>
 
 <h3>
 <a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
