Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@ Before and after the trimming, radiusing, and sanding:  </p>
 <h3>
 <a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
 
-<p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground.  </p>
+<p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The four wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground.  </p>
+
+<p><img src="https://www.dropbox.com/s/thsis3mgbukt754/inside.jpg?dl=1" alt="inside"></p>
 
 <h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
