Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology.</p>
 
-<p>I made 12 wood blocks, each containing two magnets and an NFC tag that is mapped to a song.   With a satisfying <em>clack!</em> the blocks magnetically attach to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
+<p>12 wood blocks each contain two magnets and an NFC tag.  With a satisfying <em>clack!</em> the blocks magnetically attach to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
 
 <p>The primary design goal was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  My son loves it.</p>
 
