Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Before and after the trimming, radiusing, and sanding:  </p>
 <h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
 
-<p>I haven't coded in over a decade and this is my first Python project.  So it's ugly, but functional and pretty self-explanatory. The GitHub repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
+<p>I haven't coded in well over a decade and this is my first Python project.  So it's ugly, but functional and pretty self-explanatory. The GitHub repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
       </section>
 
       <footer>
